--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.database=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
