--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,19 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
+
+
+#kafka setting
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-consumer
+# kafka read the oldest offset
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+# kafka topic setting
+payment.topic=payment
