--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=concert_reservation
 
 spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=sa
 
@@ -15,9 +15,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
 
+#tomcat ??
+server.tomcat.max-threads=500
+server.tomcat.accept-count=1000
+server.tomcat.max-connections=10000 
+
 
 #kafka setting
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9093
 spring.kafka.consumer.group-id=test-consumer
 # kafka read the oldest offset
 spring.kafka.consumer.auto-offset-reset=earliest
